Designer 2.14.0 (2013-XX-XX Markab)
===================================

 New Features:

   - EnOcean configuration (Rainer Hitz, MODELER-470)
   - panStamps Lagarto configuration (Daniel Berenguer, 
     MODELER-397)
   - Round-robin database (RRD) configuration (MODELER-394)
   - Add web view widget (MODELER-248)
   - Add polling interval and regex attributes to ShellExe
     protocol (MODELER-463, Marcus Redeker)
   - Add polling interval to telnet protocol (MODELER-464,
     Marcus Redeker)
   - Add IP address to Samsung SmartTV protocol, enabling
     use of multiple devices (MODELER-465, Ivan Martinez)


 Fixes:

   - MODELER-346: regexp validation for IP fields in TCP
     and Telnet protocols were wrong. Validations have
     been disabled.
   - MODELER-348: Prevent caching of GWT Javascript files
     on client browser to avoid Javascript conflicts when
     upgrading to a newer Designer version
   - Fixes to image asset manager (Eric Bariaux, related 
     to MODELER-292)
   - MODELER-302: List of widgets does not scroll anymore
     (Eric Bariaux)
   - MODELER-304, MODELER-334: UI elements (from panels.obj) 
     restored on login and not when UI designer pane is 
     displayed. "Please wait" message on login only dismissed 
     when UI has been built and initialized. (Eric Bariaux)


 Internal:

  - Dev Mode target in GWT build (MODELER-344)
  - Upgrade to GXT3:
     * Image Asset Picker converted (Eric Bariaux, MODELER-330)
  

Designer 2.13.8 (2013-03-13 Rosemary)
=====================================

Bug fix release:

 - MODELER-410: KNX import getting namespace used 
   on XPath from document instead of hardcoded, 
   more robust to changes.
 - MODELER-397: panStamps Lagarto configuration
   included in controller configuration options


Designer 2.13.7 (2012-10-07 Rosemary)
=====================================

 - Add Z-wave configuration


Designer 2.13.6 (2012-09-20 Rosemary)
=====================================

Bug fix release:
 