@@ -8,6 +8,7 @@ Designer 2.14.0 (2013-XX-XX Markab)
      MODELER-397)
    - Round-robin database (RRD) configuration (MODELER-394)
    - Add web view widget (MODELER-248)
+   - Add color picker widget (MODELER-333)
    - Add polling interval and regex attributes to ShellExe
      protocol (MODELER-463, Marcus Redeker)
    - Add polling interval to telnet protocol (MODELER-464,
